@@ -1,3 +1,10 @@
+w17 16.06.2016 19:27:33 +0300 - build 4709
+
+1. Снова уточнение 4697.
+   Отслеживание переключения полноэкранного режима Win10 с настройкой консоли: [ ] Wrap text output on resize
+   Восстановление оригинального размера консольного буфера при выходе
+   Не должен ломаться ConEmu для System.WindowMode = false
+
 zg 15.06.2016 22:27:05 +0200 - build 4708
 
 1. с форума: ShiftEnd и ShiftHome в панелях тормозят.
